--- a/weatherApp/Info.plist
+++ b/weatherApp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>WeatherApp에서 현재 위치를 사용하려고합니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>WeatherApp에서 현재 위치를 사용하려고합니다.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
