--- a/weatherApp/Info.plist
+++ b/weatherApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>WeatherApp에서 현재 위치를 사용하려고합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>WeatherApp에서 현재 위치를 사용하려고합니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
